--- a/website/index.html
+++ b/website/index.html
@@ -22,16 +22,8 @@
 	<!-- title -->
 	<title>mango assembler simulator</title>
 
-	<!-- vuejs -->
-	<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14"></script>
-
 	<!-- bootstrap -->
-	<link
-		href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-		rel="stylesheet"
-		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-		crossorigin="anonymous"
-	/>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"/>
 </head>
 
 <body>
